examples/neg/lambdas/closure.effekt
def twice { someBlock: () => Unit / {} } = {
  fun() { someBlock(); someBlock() }
}
effect Yield(): Unit
def main() = {
  val f = try { // @Yield =>
    val g = fun(){ Yield() }
    twice {
      g()// (@Yield)
    }
  } with Yield { println("yielded!"); resume(()) }
  f()
}